--- a/Covid19/Covid19/Views/MainView.xaml
+++ b/Covid19/Covid19/Views/MainView.xaml
@@ -21,7 +21,13 @@
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0">
-            <Label Content="COVID19" Margin="10,0,0,0" FontSize="20" FontWeight="Bold"
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="100"/>
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <Label Grid.Column="0" Content="COVID19" Margin="5,0,0,0" FontSize="20" FontWeight="Bold"
+                   VerticalContentAlignment="Center" HorizontalAlignment="Left"/>
+            <Label x:Name="NowDate" Grid.Column="1" Content="( 2020.09.08 기준 )" FontSize="13"
                    VerticalContentAlignment="Center" HorizontalAlignment="Left"/>
         </Grid>
 
