--- a/Covid19/Covid19/Views/ForeignCountryView.xaml
+++ b/Covid19/Covid19/Views/ForeignCountryView.xaml
@@ -10,11 +10,12 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Covid19.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="690" d:DesignWidth="500">
+             d:DesignHeight="790" d:DesignWidth="500">
     <Grid Background="White">
         <Grid.RowDefinitions>
             <RowDefinition Height="100"/>
             <RowDefinition Height="250"/>
+            <RowDefinition Height="35"/>
             <RowDefinition />
         </Grid.RowDefinitions>
 
@@ -63,15 +64,30 @@
             </lvc:CartesianChart>
         </Grid>
 
-        <Grid Grid.Row="2" Margin="10">
+        <Grid Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition Width="60"/>
+                <ColumnDefinition Width="20"/>
+            </Grid.ColumnDefinitions>
+            <TextBox x:Name="TxtSearchItem" Grid.Column="0" Width="100" Margin="5"
+                     VerticalAlignment="Center" HorizontalAlignment="Right"/>
+            <Button x:Name="ButSearch" Grid.Column="1" Width="55" Height="25"
+                    Content="검색" FontSize="10" Background="LightGray"
+                    VerticalAlignment="Center" HorizontalAlignment="Left"/>
+        </Grid>
+
+        <Grid Grid.Row="3" Margin="10">
             <DataGrid IsReadOnly="True" AutoGenerateColumns="False"
                       SelectedItem="{Binding SelectedEmployee}" 
                       Style="{StaticResource MahApps.Styles.DataGrid.Azure}"
                       Width="450" HorizontalAlignment="Center">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="나라" />
-                    <DataGridTextColumn Header="총 확진자" />
-                    <DataGridTextColumn Header="총 사망자" />
+                    <DataGridTextColumn Header="국가명" />
+                    <DataGridTextColumn Header="국가명_영문" />
+                    <DataGridTextColumn Header="확진자 수" />
+                    <DataGridTextColumn Header="사망자 수" />
+                    <DataGridTextColumn Header="기준일시" />
                 </DataGrid.Columns>
             </DataGrid>
         </Grid>
